Rewrite test using Java 14